--- a/css/index.css
+++ b/css/index.css
@@ -9,8 +9,8 @@
 
 nav {
     display: inline-block;
-    position: relative;
-    top: -600px;
+    position: absolute;
+    top: 250px;
     width: 180px;
     height: 600px;
     z-index: 10;
@@ -21,10 +21,16 @@ nav {
     color: #000;
 }
 
+nav>ul {
+    position: absolute;
+}
+
 nav>ul>li {
     font-size: 30px;
     margin-bottom: 30px;
     margin-left: 15px;
+    position: relative;
+
 }
 
 nav>ul>li>a {
@@ -33,8 +39,10 @@ nav>ul>li>a {
 }
 
 #best:hover>a {
+    position: relative;
+    top: -20px;
     transition: 0.3;
-    font-size: 50px;
+    font-size: 40px;
     text-shadow: 2px 2px 2px #ccc,
                  2px -2px 2px #ccc;
 }
@@ -46,6 +54,7 @@ nav>ul>li:hover>a {
 }
 
 nav>ul>li>ul {
+    width: 250px;
     display: none;
     position: absolute;
     margin-bottom: 10px;
@@ -78,9 +87,9 @@ nav>ul>li>ul>li>a:hover {
     display: inline-block;
     width: 750px;
     height: 750px;
-    position: relative;
-    margin-top: 100px;
-    margin-left: 50px;
+    position: absolute;
+    top: 100px;
+    right: 50px;
     background-image: url(../images/background1.jpg);
     background-size: cover;
 }
@@ -89,39 +98,47 @@ nav>ul>li>ul>li>a:hover {
     display: inline-block;
     width: 350px;
     height: 650px;
-    background-color: #f00;
-    position: relative;
+    background-image: url(../images/arcteryxLookbook.jpg);
+    background-size:  auto;
+    background-repeat: no-repeat;
+    background-position: 60% 0;
+    position: absolute;
     top: 60px;
-    left: 40px;
+    left: 60px;
     z-index: 5;
     box-shadow: -10px -10px 10px rgba(0,0,0,0.3),
                 -10px 10px 10px rgba(0,0,0,0.3);
 }
 
 .discountInfo {
-    position: relative;
-    top: -530px;
+    position: absolute;
+    top: 120px;
     left: 340px;
     display: inline-block;
     width: 450px;
     height: 250px;
-    background-color: #0f0;
+    background-image: url(../images/arcteryxLookbook.jpg);
+    background-size:  auto;
+    background-repeat: no-repeat;
+    background-position: 60% 0;
     z-index: 10;
     box-shadow: 10px -10px 10px rgba(0,0,0,0.3),
                 -10px 0px 10px rgba(0,0,0,0.3);
 }
 
 .newLookbook {
-    position: relative;
-    top: -550px;
+    position: absolute;
+    top: 350px;
     left: 360px;
-    display: inline-block;
     width: 300px;
     height: 300px;
-    background-color: #00f;
     z-index: 15;
     box-shadow: 10px 10px 10px rgba(0,0,0,0.3),
                 10px 0px 10px rgba(0,0,0,0.3);
+    background-image: url(../images/uniformBridge.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 40% 50%;
 }
 
 .visualBlock>div {
@@ -134,21 +151,60 @@ nav>ul>li>ul>li>a:hover {
     height: 700px;
 }
 
-.newLookbook {
-    background-image: url(../images/);
+.newBrand>div {
+    display: none;
+    width: 350px;
+    height: 650px;
+}
+.newBrand:hover {
+    background-image: url(../images/arcteryxLookbook.jpg);
+    background-size:  auto;
+    background-repeat: no-repeat;
+    background-position: 60% 0;
 }
 
-.newLookbook h3, .newLookbook p{
+.newBrand:hover>div {
+    display: inline-block;
+    margin: auto;
+}
+
+.newBrand:hover img {
+    position: absolute;
+    bottom: 100px;
+    right: 25px;
+    display: inline-block;
+    width: 150px;
+    height: 150px;
+}
+
+.newBrand:hover>.lookbookNotHover{
+    display: none;
+}
+
+.discountInfo:hover {
+    background-image: url(../images/arcteryxLookbook.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.newLookbook>.lookbookHover{
     display: none;
 }
 
 .newLookbook:hover {
-    top:-750px;
+    top: 100px;
     left: 250px;
     background-image: url(../images/uniformBridge.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 40% 0;
+}
+
+.newLookbook>.lookbookNotHover {
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    text-decoration: underline;
 }
 
 .newLookbook:hover>h3, .newLookbook:hover>p {
@@ -161,6 +217,11 @@ nav>ul>li>ul>li>a:hover {
 
 }
 
+.newLookbook:hover>.lookbookNotHover {
+    display: none;
+}
+
+
 .newLookbook:hover>h3 {
     text-decoration: underline;
     font-size: 25px;
@@ -171,8 +232,8 @@ nav>ul>li>ul>li>a:hover {
 /* NOTICE 영역 시작 */
 
 .noticeCs {
-    position: relative;
-    top: -500px;
+    position: absolute;
+    top: 950px;
     width: 100%;
     height: 270px;
     margin: 15px;
